# awesome-humanoid-hardware-guide

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .prettierrc  260426.md  AGENTS.md  ANALYSE_BUGS_COMPLETE.md  Dockerfile.api  ENVIRONMENT_FIX_REPORT.md  FINAL_COMPLETION_REPORT.md  LICENSE  LICENSE CC-BY  README.md  aa  api-error.txt  api-output.txt  api-test-utf8.txt  api-test.txt  api.err  api2.err  api3.err  api4.err  bugs_api.txt  bugs_desktop.txt  bugs_mobile.txt  bugs_report.md  check_api.txt  check_desktop.txt  check_kiosk.txt  check_lint.txt  check_mobile.txt  create-secrets.ps1  docker-compose.yml  final2_mobile.txt  final_mobile.txt  fix_file.js  fix_test.js  fix_test2.js  generate-secrets.ps1  (+81 more)
.github/workflows/: ci.yml
.opencode/agents/: ci-monitor-subagent.md  default.md
.opencode/commands/: monitor-ci.md  obsidian.md
apps/api/: jest.config.js  package.json  tsconfig.app.json  tsconfig.dev.json  tsconfig.json  tsconfig.spec.json  webpack.config.js
apps/api-e2e/: .spec.swcrc  jest.config.cts  package.json  tsconfig.json
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.mts
apps/desktop-e2e/: package.json  playwright.config.ts
apps/desktop/src-tauri/: Cargo.toml  Cargo.toml.bak  Cargo.toml.rej  build.rs  install_rust_deps.sh  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: hardware_diag.rs  lib.rs  pdf_generator.rs  pdf_generator.rs.bak  pdf_generator.rs.rej  purchase_order.rs  report_generator.rs  smart_card.rs  telemetry.rs  thermal_printer.rs  updater.rs  whisper.rs
docs/: CERTIFICATE_PINNING_GUIDE.md  HARDWARE_AND_ARCHITECTURE_ANALYSIS.md  STRESS_TEST_PROTOCOL.md
nbproject/: project.xml
plan-execution/: README.md
prisma/: schema.prisma
(+549 files in other folders)
