[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
mdns-sd = "0.18.2"
tokio = { version = "1", features = ["rt", "macros", "time"] }
sysinfo = "0.36.1"
qrcode = "0.14.1"
image = "0.25.6"
aes-gcm = "0.10.3"
rand = "0.9.2"
tempfile = "3.27.0"
uuid = { version = "1.20.0", features = ["v4"] }
serialport = "4.9.0"
keyring = "3.6.3"
printpdf = { version = "0.7.0", features = ["embedded_images", "image"] }
hex = "0.4.3"
