[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
mdns-sd = "0.18.2"
tokio = { version = "1", features = ["rt", "macros", "time"] }
sysinfo = "0.36.1"
keyring = "3.6.3"
serialport = "4.9.0"
printpdf = "0.5.0"
qrcode = "0.14"
image = "0.24"
sha2 = "0.10"
chrono = "0.4"
